--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -10,7 +10,7 @@
 {% block content %}
 <div class="overlay"></div>
 
-<main class="checkout-page-wrapper" role="main">
+<div class="checkout-page-wrapper">
   <div class="container checkout-content">
     <header class="row mb-4">
       <div class="col">
@@ -116,5 +116,5 @@
       </div>
     </nav>
   </div>
-</main>
+</div>
 {% endblock %}
