--- a/newsletter/templates/newsletter/newsletter_signup.html
+++ b/newsletter/templates/newsletter/newsletter_signup.html
@@ -25,8 +25,8 @@
 {% endblock %}
 
 {% block content %}
-<!-- Main content: newsletter call-to-action and signup form -->
-<main class="newsletter-page-wrapper" role="main">
+<!-- Newsletter call-to-action and signup form -->
+<section class="newsletter-page-wrapper">
   <section class="container newsletter-content mt-5" aria-labelledby="newsletter-heading">
 
     <!-- Section heading and description -->
@@ -69,5 +69,5 @@
       </div>
     </section>
   </section>
-</main>
+</section>
 {% endblock %}
