--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-<main class="content-wrapper" role="main">
+<div class="content-wrapper">
   <section class="form-container container py-4 mt-5" aria-labelledby="add-product-heading">
 
     <!-- Page Heading -->
@@ -20,17 +20,27 @@
     </header>
 
     <!-- Add Product Form -->
-    <form method="POST" action="{% url 'add_product' %}" enctype="multipart/form-data" aria-label="Add new product form">
+    <form method="POST" action="{% url 'add_product' %}" enctype="multipart/form-data" aria-label="Add product form">
       {% csrf_token %}
+
       {% for field in form %}
-        {% if field.name != 'image' and field.name != 'image_url' %}
-          {{ field|as_crispy_field }}
-        {% elif field.name == 'image' %}
+        {% if field.name != 'image' %}
           {{ field|as_crispy_field }}
         {% endif %}
       {% endfor %}
 
-      <!-- Action Buttons -->
+      <!-- Image Field Manual Render -->
+      <div class="form-group">
+        <label for="custom_id_image" class="font-weight-bold">Image:</label>
+        <input type="file" name="image" id="custom_id_image" class="form-control-file rounded-0">
+        <div class="mt-2">
+          <img id="custom-image-preview" src="#" alt="New Image Preview"
+               class="img-thumbnail" style="display: none; max-width: 150px;">
+          <span class="text-danger" id="custom-filename"></span>
+        </div>
+      </div>
+
+      <!-- Buttons -->
       <div class="d-flex justify-content-between mt-4">
         <a class="btn btn-outline-navy" href="{% url 'products' %}">Cancel</a>
         <button class="btn btn-navy" type="submit">Add Product</button>
@@ -38,5 +48,10 @@
     </form>
 
   </section>
-</main>
+</div>
+{% endblock %}
+
+{% block postloadjs %}
+  {{ block.super }}
+  <script src="{% static 'products/js/image_preview.js' %}"></script>
 {% endblock %}
