--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -7,7 +7,7 @@
 {% block body_class %}form-page{% endblock %}
 
 {% block content %}
-<main class="content-wrapper" role="main">
+<div class="content-wrapper">
   <section class="form-container" aria-labelledby="sign-in-heading">
     <hr>
     <h2 id="sign-in-heading" class="logo-font mb-4 text-uppercase">{% trans "Sign In" %}</h2>
@@ -48,5 +48,5 @@
       </div>
     </form>
   </section>
-</main>
+</div>
 {% endblock %}
