--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,5 +1,5 @@
 {% comment %} Main Navigation Menu {% endcomment %}
-<nav class="collapse navbar-collapse" id="main-nav" role="navigation" aria-label="Main site navigation">
+<nav class="collapse navbar-collapse" id="main-nav" aria-label="Main site navigation">
   <ul class="navbar-nav w-auto mx-auto">
 
     <!-- All Tools Dropdown -->
