--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,4 +1,4 @@
-<aside
+<div
   class="toast custom-toast rounded-0 border-top-0 shadow"
   role="alert"
   aria-live="assertive"
@@ -80,4 +80,4 @@
       </div>
     {% endif %}
   </div>
-</aside>
+</div>
