--- a/testimonials/templates/testimonials/testimonial_list.html
+++ b/testimonials/templates/testimonials/testimonial_list.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-<main class="container products-page-content" role="main">
+<div class="container products-page-content">
 
   <!-- Back Navigation -->
   <nav class="mb-4" aria-label="Back to home">
@@ -68,5 +68,5 @@
     </a>
   </div>
 
-</main>
+</div>
 {% endblock %}
