--- a/newsletter/templates/newsletter/unsubscribe.html
+++ b/newsletter/templates/newsletter/unsubscribe.html
@@ -12,15 +12,15 @@
 <header class="container header-container" role="banner">
   <div class="row">
     <div class="col text-center">
-      <h2 class="logo-font text-uppercase mt-5">Unsubscribe</h2>
+      <h2 id="unsubscribe-heading" class="logo-font text-uppercase mt-5">Unsubscribe</h2>
     </div>
   </div>
 </header>
 {% endblock %}
 
 {% block content %}
-<!-- Main Content: Unsubscribe form -->
-<main class="newsletter-page-wrapper" role="main">
+<!-- Unsubscribe form section -->
+<section class="newsletter-page-wrapper">
   <section class="container newsletter-content" aria-labelledby="unsubscribe-heading">
     <div class="row justify-content-center">
       <div class="col-12 col-md-8 col-lg-6">
@@ -47,5 +47,5 @@
       </div>
     </div>
   </section>
-</main>
+</section>
 {% endblock %}
