--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-<main class="content-wrapper" role="main">
+<div class="content-wrapper">
   <section class="form-container container py-4 mt-5" aria-labelledby="edit-product-heading">
 
     <!-- Page Heading -->
@@ -24,17 +24,37 @@
       {% csrf_token %}
 
       {% for field in form %}
-        {% if field.name == 'image' %}
-          <div class="form-group custom-file-field">
-            <label for="{{ field.id_for_label }}" class="form-label font-weight-bold">Image:</label>
-            {{ field }}
-          </div>
-        {% elif field.name != 'image_url' %}
+        {% if field.name != 'image' and field.name != 'image_url' %}
           {{ field|as_crispy_field }}
         {% endif %}
       {% endfor %}
 
-      <!-- Action Buttons -->
+      <!-- Image Upload -->
+      <div class="form-group">
+        <label for="image-upload" class="form-label font-weight-bold">Image:</label>
+        <input id="image-upload" type="file" name="image" accept="image/*"
+               class="form-control-file border-black rounded-0">
+      </div>
+
+      <!-- Current Image -->
+      {% if product.image %}
+        <div class="mt-3">
+          <p><strong>Current Image:</strong></p>
+          <a href="{{ product.image.url }}" target="_blank">
+            <img src="{{ product.image.url }}" alt="{{ product.name }}"
+                 class="img-thumbnail mb-2" style="max-width: 150px;">
+          </a>
+        </div>
+      {% endif %}
+
+      <!-- New Image Preview -->
+      <div class="mt-2">
+        <img id="image-preview-edit" src="#" alt="New Image Preview"
+             class="img-thumbnail" style="display: none; max-width: 150px;">
+        <span id="filename-edit" class="text-danger font-weight-bold"></span>
+      </div>
+
+      <!-- Buttons -->
       <div class="d-flex justify-content-between mt-4">
         <a class="btn btn-outline-navy" href="{% url 'products' %}">Cancel</a>
         <button class="btn btn-navy" type="submit">Update Product</button>
@@ -42,15 +62,10 @@
     </form>
 
   </section>
-</main>
+</div>
 {% endblock %}
 
 {% block postloadjs %}
   {{ block.super }}
-  <script type="text/javascript">
-    $('#new-image').change(function () {
-      const file = $('#new-image')[0].files[0];
-      $('#filename').text(`Image will be set to: ${file.name}`);
-    });
-  </script>
+  <script src="{% static 'products/js/image_preview.js' %}"></script>
 {% endblock %}
