--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <!-- ========== Profile Page Content ========== -->
-<main class="profile-page-wrapper bg-white w-100" role="main">
+<div class="profile-page-wrapper bg-white w-100">
   <section class="container profile-container py-5" aria-labelledby="profile-heading">
 
     <!-- Profile Header -->
@@ -158,10 +158,10 @@
     </section>
 
   </section>
-</main>
+</div>
 {% endblock %}
 
 {% block postloadjs %}
   {{ block.super }}
-  <script src="{% static 'profiles/js/countryfield.js' %}" type="text/javascript"></script>
+  <script src="{% static 'profiles/js/countryfield.js' %}"></script>
 {% endblock %}
