--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -1,12 +1,11 @@
 {% extends "account/base.html" %}
-
 {% load i18n %}
 
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 {% block body_class %}form-page{% endblock %}
 
 {% block content %}
-<main class="content-wrapper" role="main">
+<div class="content-wrapper">
   <section class="form-container" aria-labelledby="sign-out-heading">
     <hr>
     <h2 id="sign-out-heading" class="logo-font mb-4 text-uppercase">{% trans "Sign Out" %}</h2>
@@ -25,5 +24,5 @@
       </div>
     </form>
   </section>
-</main>
+</div>
 {% endblock %}
