--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -6,7 +6,7 @@
 {% block body_class %}form-page{% endblock %}
 
 {% block content %}
-<main class="content-wrapper" role="main">
+<div class="content-wrapper">
   <section class="form-container" aria-labelledby="signup-heading">
     <hr>
     <h2 id="signup-heading" class="logo-font mb-4 text-uppercase">{% trans "Sign Up" %}</h2>
@@ -36,5 +36,5 @@
       </div>
     </form>
   </section>
-</main>
+</div>
 {% endblock %}
