--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,30 +1,30 @@
 {% comment %} Footer Section - Reusable site footer {% endcomment %}
-<footer class="site-footer {% block footer_theme %}footer-dark{% endblock %}" role="contentinfo">
+<div class="site-footer {% block footer_theme %}footer-dark{% endblock %}">
   <div class="container text-center py-4">
 
     {% comment %} Social Media Links {% endcomment %}
     <section class="footer-social mb-2" aria-label="Social media links">
       <a href="https://www.facebook.com/profile.php?id=61577160016945"
-   target="_blank"
-   rel="noopener noreferrer"
-   aria-label="Visit our Facebook page"
-   class="mx-2 text-white">
-  <i class="fab fa-facebook fa-lg"></i>
-</a>
-
+         target="_blank"
+         rel="noopener noreferrer"
+         aria-label="Visit our Facebook page"
+         class="mx-2 text-white">
+        <i class="fab fa-facebook fa-lg"></i>
+      </a>
     </section>
 
-    {% comment %} Testimonial Button {% endcomment %}
-    <section class="footer-cta mb-2">
+    {% comment %} Testimonial Button with Accessible Heading {% endcomment %}
+    <section class="footer-cta mb-2" aria-labelledby="footer-cta-heading">
+      <h2 id="footer-cta-heading" class="sr-only">Feedback</h2>
       <a href="{% url 'create_testimonial' %}" class="btn btn-green btn-sm rounded-0 text-uppercase">
         Leave a Review
       </a>
     </section>
 
     {% comment %} Copyright Notice {% endcomment %}
-    <p class="mb-0 small" aria-label="Copyright">
+    <p class="mb-0 small">
       &copy; 2025 Warrior Tools. All rights reserved.
     </p>
 
   </div>
-</footer>
+</div>
