--- a/testimonials/templates/testimonials/delete_testimonial.html
+++ b/testimonials/templates/testimonials/delete_testimonial.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<main class="content-wrapper mt-5 text-center">
+<div class="content-wrapper mt-5 text-center">
   <section class="form-container">
     <h2 class="logo-font text-danger">Delete Testimonial</h2>
     <p>Are you sure you want to delete this testimonial?</p>
@@ -11,5 +11,5 @@
       <a href="{% url 'testimonial_list' %}" class="btn btn-secondary">Cancel</a>
     </form>
   </section>
-</main>
+</div>
 {% endblock %}
