--- a/testimonials/templates/testimonials/update_testimonial.html
+++ b/testimonials/templates/testimonials/update_testimonial.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-<main class="content-wrapper" role="main">
+<div class="content-wrapper">
   <section class="form-container">
 
     <!-- Page Heading -->
@@ -44,5 +44,5 @@
     </div>
 
   </section>
-</main>
+</div>
 {% endblock %}
