adjust styling for smaller screens

--- a/static/css/account_pages.css
+++ b/static/css/account_pages.css
@@ -151,3 +151,11 @@ body.form-page .form-container .login-or {
     color: #163f73;
     text-decoration: underline;
 }
+
+@media only screen and (max-width: 375px) {
+    .form-container,
+    .bag-content,
+    .content-wrapper {
+      padding-top: 5rem; /* Adjust as needed */
+    }
+  }
